--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "reload -b -d src -w src"
+    "start": "reload -b -d src"
   },
   "dependencies": {},
   "devDependencies": {
